--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>common</module>
+        <module>base</module>
     </modules>
 </project>
