--- a/base/pom.xml
+++ b/base/pom.xml
@@ -4,13 +4,7 @@
     <groupId>info.icoresys</groupId>
     <artifactId>icore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <artifactId>base</artifactId>
-  <dependencies>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
-    </dependency>
-  </dependencies>
 </project>
