--- a/icore-eureka-server/src/main/resources/application.yml
+++ b/icore-eureka-server/src/main/resources/application.yml
@@ -8,3 +8,5 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+logging:
+  config: classpath:log4j2-spring.xml
