--- a/icore-eureka-server/src/main/resources/application.yml
+++ b/icore-eureka-server/src/main/resources/application.yml
@@ -9,4 +9,4 @@ eureka:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 logging:
-  config: classpath:log4j2-spring.xml
+  config: classpath:log.xml
