--- a/service/icore-config-client-test/pom.xml
+++ b/service/icore-config-client-test/pom.xml
@@ -12,9 +12,8 @@
 
 	<parent>
 		<groupId>info.icoresys</groupId>
-		<artifactId>icore</artifactId>
+		<artifactId>service</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
 </project>
