--- a/springpackage/icore-eureka-server/pom.xml
+++ b/springpackage/icore-eureka-server/pom.xml
@@ -4,7 +4,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>icore-eureka-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>icore-eureka-server</name>
@@ -12,10 +11,10 @@
 
     <parent>
         <groupId>info.icoresys</groupId>
-        <artifactId>icore</artifactId>
+        <artifactId>spring-package</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
 
     <dependencies>
         <dependency>
